--- a/x86.config
+++ b/x86.config
@@ -84,7 +84,7 @@ CONFIG_PACKAGE_luci-app-frpc=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
